[DROOLS-1230] kie-server: EE7 WAR supports WFLY10/EAP7 by default (instead of WFLY8) (#548)
* the included JMS config makes it impossible to make the WAR work on
   both WFLY8 and WFLY10 OOTB at the same time
 * the EE7 WAR should still work on WildFly 8, but the META-INF/kie-server-jms.xml needs
   to be manually fixed (e.g. replacing the new WFLY10/ActiveMQ config
   with the old WFLY8/HornetQ one)